// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Spinner large 1`] = `
<div
  aria-busy="true"
  aria-valuemax="100"
  aria-valuemin="0"
  class="Component-spinner- Component-spinnerLarge-"
  data-component-name="BusyIndicator"
  role="progressbar"
  tabindex="0"
  title="Please wait"
>
  Loading...
</div>
`;

exports[`Spinner medium 1`] = `
<div
  aria-busy="true"
  aria-valuemax="100"
  aria-valuemin="0"
  class="Component-spinner- Component-spinnerMedium-"
  data-component-name="BusyIndicator"
  role="progressbar"
  tabindex="0"
  title="Please wait"
>
  Loading...
</div>
`;

exports[`Spinner small 1`] = `
<div
  aria-busy="true"
  aria-valuemax="100"
  aria-valuemin="0"
  class="Component-spinner- Component-spinnerSmall-"
  data-component-name="BusyIndicator"
  role="progressbar"
  tabindex="0"
  title="Please wait"
>
  Loading...
</div>
`;
